package usantatecla.mastermind.controllers;

import usantatecla.mastermind.models.Board;

public class StartController extends Controller {

    public StartController(Board board) {
        super(board);
    }

}
